--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -255,7 +255,7 @@
    ],
    "source": [
     "# данные о датах и праздниках\n",
-    "calendar = pd.read_csv('./data/shop_sales_dates.csv')\n",
+    "calendar = pd.read_csv('../data/shop_sales_dates.csv')\n",
     "calendar['date'] = pd.to_datetime(calendar['date'])\n",
     "calendar.head()"
    ]
@@ -564,7 +564,7 @@
    ],
    "source": [
     "# данные о средней стоимости единиц товаров в неделю\n",
-    "prices = pd.read_csv('./data/shop_sales_prices.csv')\n",
+    "prices = pd.read_csv('../data/shop_sales_prices.csv')\n",
     "prices = prices[prices['store_id'] == 'STORE_2']\n",
     "prices.head()"
    ]
@@ -802,7 +802,7 @@
    ],
    "source": [
     "# данные о количестве продаж артикулов\n",
-    "sales = pd.read_csv('./data/shop_sales.csv')\n",
+    "sales = pd.read_csv('../data/shop_sales.csv')\n",
     "sales = sales[sales['store_id'] == 'STORE_2']\n",
     "sales.head()"
    ]
@@ -1617,7 +1617,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('./data/full_data.csv', index=False)"
+    "df.to_csv('../data/full_data.csv', index=False)"
    ]
   },
   {
