--- a/notebooks/models.ipynb
+++ b/notebooks/models.ipynb
@@ -340,7 +340,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('./data/full_data.csv')\n",
+    "df = pd.read_csv('../data/full_data.csv')\n",
     "df['date'] = pd.to_datetime(df['date'])\n",
     "\n",
     "# рассмотрим определенный артикул\n",
